src/scss/components/footer.scss
.footer {
  display: flex;
  padding-top: 100px;
  padding-bottom: 100px;
  align-items: center;
  justify-content: space-between;
  @media screen and (max-width: 1024px) {
    flex-direction: column;
    align-items: center;
    padding-top: 70px;
    padding-bottom: 20px;
  }
  &__logo {
    height: 100px;
    width: 170px;
    background-image: url('/assets/images/toshonado-logo.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    @media screen and (max-width: 1024px) {
      margin-bottom: 30px;
    }
    @media screen and (max-width: 480px) {
      height: 50px;
      width: 100px;
    }
  }
  &__socials {
    display: flex;
    flex-direction: column;
    @media screen and (max-width: 1024px) {
      order: 10;
      flex-direction: row;
    }
    .social__item {
      height: 1.5rem;
      width: 1.5rem;
      background-repeat: no-repeat;
      background-position: center;
      background-size: contain;
      margin-bottom: 30px;
      @media screen and (max-width: 1024px) {
        margin: 10px;
      }
      &:last-child {
        margin-bottom: 0;
      }
      &--facebook {
        background-image: url('/assets/images/icons/icon-facebook.png')
      }
      &--instagram {
        background-image: url('/assets/images/icons/icon-instagram.png')
      }
      &--twitter {
        background-image: url('/assets/images/icons/icon-twitter.png')
      }
      &--telegram {
        background-image: url('/assets/images/icons/icon-telegram.png')
      }
    }
  }
  &__address, &__phone, &__email, &__schedule {
    font-family: 'Proxima Nova Th';
    font-weight: 800;
    font-style: normal;
    color: black;
    margin-bottom: 1em;
    line-height: 1.2;
    display: block;
    font-size: 1.5rem;
    &:hover, &:active, &:focus {
      color: black;
    }
  }
  &__email {
    margin-bottom: 0;
  }
  &__contact {
    text-align: center;
    @media screen and (max-width: 1024px) {
      margin-bottom: 30px;
    }
  }

}

